# giftcard-system

./: .continuerules  .gitignore  LICENSE  Process.md  README.md  package.json
backend/: .env.example  Cargo.toml
backend/migrations/: 20250325_init.sql  mysql_init.sql
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/handlers/: gift_cards.rs
backend/src/models/: gift_card.rs  mod.rs
backend/src/routes/: gift_cards.rs  mod.rs
backend/src/utils/: error.rs  mod.rs  validation.rs
frontend/: package.json  remix.config.js  tailwind.config.js
frontend/app/: root.tsx
frontend/app/routes/: _index.tsx  gift-cards.$id.tsx  gift-cards.new.tsx  gift-cards.search.tsx
frontend/app/styles/: custom.css  global.css
