[package]
name = "gift-card-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "mysql", "uuid", "chrono", "json"] }
qrcode = "0.12.0"
image = "0.24.6"
base64 = "0.21.0"
argon2 = "0.5.0"
jsonwebtoken = "8.3.0"
regex = "1.8.1"
lazy_static = "1.4.0"